[gd_scene load_steps=11 format=3 uid="uid://t2dui8ppm3a4"]

[ext_resource type="FontFile" uid="uid://dqh3doni8e0wc" path="res://fonts/AmericanCaptain-MdEY.otf" id="2_5sufa"]
[ext_resource type="Script" uid="uid://gmrv6pgchkwc" path="res://credits/auto_scroll_container.gd" id="2_ak7hi"]
[ext_resource type="Script" uid="uid://cc2wtqasev7le" path="res://credits/credits_label.gd" id="3_kngql"]
[ext_resource type="Script" uid="uid://bnub0cq2y0deh" path="res://credits/scrolling_credits.gd" id="4"]

[sub_resource type="Environment" id="Environment_5sufa"]
background_mode = 3
glow_enabled = true

[sub_resource type="FontVariation" id="FontVariation_wp0k2"]
base_font = ExtResource("2_5sufa")
spacing_glyph = 5
spacing_space = 2
spacing_top = 6

[sub_resource type="Theme" id="Theme_wp0k2"]
default_font = SubResource("FontVariation_wp0k2")
RichTextLabel/colors/default_color = Color(0.962748, 0.455119, 0, 1)
RichTextLabel/constants/outline_size = 2
RichTextLabel/constants/shadow_offset_x = 2
RichTextLabel/constants/shadow_offset_y = 1
RichTextLabel/constants/shadow_outline_size = 3
RichTextLabel/font_sizes/bold_font_size = 32
RichTextLabel/font_sizes/normal_font_size = 25

[sub_resource type="Animation" id="Animation_wp0k2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldEnvironment:environment:glow_bloom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5sufa"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldEnvironment:environment:glow_bloom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.05]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_052lj"]
_data = {
&"RESET": SubResource("Animation_wp0k2"),
&"fade_in": SubResource("Animation_5sufa")
}

[node name="ScrollingCredits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5sufa")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("2_ak7hi")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderSpace" type="Control" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 720)
layout_mode = 2

[node name="CreditsLabel" type="RichTextLabel" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(1280, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_wp0k2")
bbcode_enabled = true
text = "[center]
[img=700x300]res://credits/GameTitle.png[/img]  









[color=#86d818][b]Project Lead Developer[/b][/color]
Wendell  Terence Dador











[color=#86d818][b]Software Development Team[/b][/color]
Vhea Asesor
John Patrick Gerona
 Paul Andrei Ardiente 
Dainz Andrei Trasadas"
fit_content = true
scroll_active = false
script = ExtResource("3_kngql")
auto_update = false
h1_font_size = 70
max_image_width = 600
max_image_height = 300
h1_color = Color(0.52549, 0.847059, 0.0941176, 1)

[node name="FooterSpace" type="Control" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 720)
layout_mode = 2

[node name="WorldPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_052lj")
}

[connection signal="end_reached" from="ScrollContainer" to="." method="_on_scroll_container_end_reached"]
